# The-Genius

./: .gitignore  .markdownlint.json  CLAUDE.md  DEPLOYMENT_GUIDE.md  Fixing SSE Issues in ios-app and web-app.md  README.md  Structured Responses with Streaming Text.md  font_implementation_guide.md  package-lock.json  render.yaml  requirements.txt  test.db  test_mcp_setup.py
backend/: .gitignore  Dockerfile  QUICKSTART.md  README.md  confidence_logs.db  generate_schema.py  generate_schema_standalone.py  package-lock.json  package.json  pyproject.toml  quick_test.py  render.yaml  requirements.txt  test_frontend_logic.py  test_schema_validation.py  test_search_discipline_cli.py  test_step2.py  test_step5_confidence_scoring.py  test_step7_date_anchoring.py  test_web_search.py  test_web_search_comprehensive.py  test_web_search_frontend.html
backend/app/: main.py  models.py
backend/app/services/: confidence_phrase_tuner.py  confidence_scoring.py  openai_client.py  prompt_loader.py  pybaseball_service.py  response_logger.py  schema_validator.py  web_search_discipline.py
backend/docs/: step4-web-search-discipline.md  step5-confidence-scoring.md
backend/schemas/: response.schema.json
backend/scripts/: setup_pybaseball_integration.sh  test_backend_connection.py  test_backend_streaming.py  test_pybaseball_integration.py  test_pybaseball_streamable.py  token-estimator.js  token-usage-log.json  weekly-token-monitor.sh  weekly_brier_score_pipeline.py
backend/tests/: test_api_integration.py  test_main.py  test_openai_client.py  test_prompts.py  test_web_search_discipline.py
(+216 files in other folders)
